syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "io.anemos.protobeam.examples";
option java_multiple_files = true;

package io.anemos.protobeam.examples;

message ProtoBeamWktMessage {
    string test_name = 1;
    int32 test_index = 2;
    google.protobuf.Timestamp timestamp = 3;
}